# TicTacToe-C-

./: CMakeLists.txt  main.cpp
Managers/TicTacToeGame/: TicTacToeGame.cpp  TicTacToeGame.h
Models/TicAI/: TicAI.cpp  TicAI.h
Models/TicTacToe/: TicTacToe.cpp  TicTacToe.h
Models/WinningPattern/: WinningPattern.cpp  WinningPattern.h
structs/: CaseScore.cpp
